load("@buildtools//:rules.bzl", "buildifier")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_library.bzl", "sh_library")

# Format all Bazel files.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

sh_library(
    name = "bash-util",
    srcs = ["bash-util.sh"],
    visibility = ["//visibility:public"],
)

# Update Bzlmod and Rust dependencies in `MODULE.bazel`:
sh_binary(
    name = "update-dependencies",
    srcs = ["update-dependencies.sh"],
    args = ["$(location @buildtools//:buildozer)"],
    data = ["@buildtools//:buildozer"],
    deps = [":bash-util"],
)

# Bazel resources to cross-compile source code against musl libc
# for inclusion in Docker containers.
# Inspired by https://github.com/bazelbuild/rules_rust/tree/0.59.1/examples/musl_cross_compiling.

platform(
    name = "x86_64-linux-musl",
    constraint_values = [
        ":musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    visibility = ["//cluster/node:__pkg__"],
)

constraint_setting(
    name = "linker",
    default_constraint_value = ":unknown",
)

constraint_value(
    name = "musl",
    constraint_setting = ":linker",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "unknown",
    constraint_setting = ":linker",
    visibility = ["//visibility:public"],
)
