load("@buildtools//:rules.bzl", "buildifier")
load("@rules_python//python:defs.bzl", "py_binary")

# Format all Bazel files.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "fix",
    mode = "fix",
)

py_binary(
    name = "upgrade-dependencies",
    srcs = ["dependencies-upgrade.py"],
    data = [
        "@buildtools//:buildozer",
        "@rules_go//go",
    ],
    main = "dependencies-upgrade.py",
    deps = [
        "//dev/lib:util-python",
        "@pypi//packaging",
        "@pypi//tomlkit",
    ],
)

# Bazel resources to cross-compile source code against musl libc
# for inclusion in Docker containers.
# Inspired by https://github.com/bazelbuild/rules_rust/tree/0.59.1/examples/musl_cross_compiling.

platform(
    name = "x86_64-linux-musl",
    constraint_values = [
        ":musl",
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    visibility = ["//cluster/node:__pkg__"],
)

constraint_setting(
    name = "linker",
    default_constraint_value = ":unknown",
)

constraint_value(
    name = "musl",
    constraint_setting = ":linker",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "unknown",
    constraint_setting = ":linker",
    visibility = ["//visibility:public"],
)
