load("@environment//:environment.bzl", "localhost")
load("@rules_k8s//:test.bzl", "k8s_cluster_test")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("//cluster/bootstrap:bootstrap.bzl", "bootstrap", "component", "domain", "service")

bootstrap(
    name = "walkthrough-bootstrap",
    cluster_registry = "host.minikube.internal:5000",
    domains = {
        "00000000000000000000000000000001": domain(
            aliases = ["api.vimana.host"],
            services = {
                "foo.bar.AdderService": service(
                    components = {
                        "1.0.0": component(
                            metadata = "//work/runtime/tests/components:adder-metadata",
                            module = "//work/runtime/tests/components:adder-c",
                        ),
                    },
                ),
            },
        ),
    },
    registry = "http://{}:5000".format(localhost),
)

k8s_cluster_test(
    name = "walkthrough-test",
    objects = [":walkthrough-bootstrap"],
    services = {
        "vimana-gateway": [
            "api.vimana.host",
            "api.fersher.host",
        ],
    },
    setup = [":walkthrough-bootstrap"],
    tags = ["external"],  # Never cache test results.
    test = ":walkthrough",
)

py_binary(
    name = "walkthrough",
    srcs = ["walkthrough.py"],
    data = [
        ":walkthrough-bootstrap",
    ],
    deps = [
        "//work/runtime/tests/components:adder-py-grpc",
        "//work/runtime/tests/components:adder-py-pb2",
    ],
)
