load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "coding-proto",
    srcs = ["coding.proto"],
)

# K8s Container Runtime Interface "Runtime API".
rust_prost_library(
    name = "coding-prost",
    proto = ":coding-proto",
)