load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_binary(
    name = "actio",
    srcs = ["actio.rs"],
    deps = [
        ":common",
        "//util:error",
        "//work/runtime:coding-prost",
        "@crates//:prost-types",
    ],
)

rust_binary(
    name = "wit",
    srcs = ["wit.rs"],
    deps = [
        ":common",
        "@crates//:prost-types",
    ],
)

rust_library(
    name = "common",
    srcs = ["common.rs"],
    deps = [
        "@crates//:prost",
        "@crates//:prost-types",
    ],
)
