load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

# The Vimana runtime implements the K8s CRI.
rust_binary(
    name = "runtime",
    srcs = [
        "containers.rs",
        "cri/image.rs",
        "cri/mod.rs",
        "cri/runtime.rs",
        "host.rs",
        "ipam.rs",
        "main.rs",
        "pods.rs",
        "state.rs",
    ],
    binary_name = "vimanad",
    visibility = ["//visibility:public"],
    deps = [
        ":cri-api-prost",
        ":logging",
        ":metadata-prost",
        ":names",
        "//runtime/decode",
        "//runtime/encode",
        "@crates//:anyhow",
        "@crates//:axum",
        "@crates//:bytes",
        "@crates//:clap",
        "@crates//:futures",
        "@crates//:http",
        "@crates//:hyper-util",
        "@crates//:lazy_static",
        "@crates//:opentelemetry-appender-tracing",
        "@crates//:opentelemetry-stdout",
        "@crates//:opentelemetry_sdk",
        "@crates//:papaya",
        "@crates//:prost",
        "@crates//:regex",
        "@crates//:reqwest",
        "@crates//:rtnetlink",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:sha2",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tower",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:wasmtime",
    ],
)

rust_library(
    name = "names",
    srcs = ["names.rs"],
    visibility = [":__subpackages__"],
    deps = [
        "@crates//:anyhow",
        "@crates//:lazy_static",
        "@crates//:regex",
    ],
)

rust_test(
    name = "names-test",
    crate = ":names",
)

rust_library(
    name = "logging",
    srcs = ["logging.rs"],
    deps = [
        ":names",
        "@crates//:tracing",
    ],
)

exports_files(["metadata.proto"])

proto_library(
    name = "metadata-proto",
    srcs = ["metadata.proto"],
    visibility = [":__subpackages__"],
)

rust_prost_library(
    name = "metadata-prost",
    proto = "metadata-proto",
    visibility = [
        ":__subpackages__",
        "//cli/protoc:__pkg__",
    ],
)

rust_prost_library(
    name = "cri-api-prost",
    proto = "@cri-api//pkg/apis/runtime/v1:api-proto",
)
