package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "error",
    srcs = ["error.rs"],
)

rust_test(
    name = "error-test",
    crate = ":error",
)

rust_library(
    name = "names",
    srcs = ["names.rs"],
)

rust_test(
    name = "names-test",
    crate = ":names",
)

exports_files(["wit-bindgen"])

sh_binary(
    name = "update-dependencies",
    srcs = ["update-dependencies.sh"],
    data = ["@buildtools//:buildozer"],
    args = ["$(rootpath @buildtools//:buildozer)"],
)
