package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "error",
    srcs = ["error.rs"],
)

rust_test(
    name = "error-test",
    crate = ":error",
)

rust_library(
    name = "names",
    srcs = ["names.rs"],
    deps = [":error"],
)

rust_test(
    name = "names-test",
    crate = ":names",
)

sh_binary(
    name = "update-dependencies",
    srcs = ["update-dependencies.sh"],
    args = ["$(rootpath @buildtools//:buildozer)"],
    data = ["@buildtools//:buildozer"],
)
