load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "error",
    srcs = ["error.rs"],
    visibility = [":__subpackages__"],
    deps = [
        "@crates//:http",
        "@crates//:tonic",
    ],
)

rust_library(
    name = "names",
    srcs = ["names.rs"],
    visibility = [":__subpackages__"],
    deps = [
        ":error",
        "@crates//:lazy_static",
        "@crates//:regex",
    ],
)

rust_test(
    name = "names-test",
    crate = ":names",
)
