load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

exports_files(
    ["deploy.yaml"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "server",
    srcs = ["server.go"],
    deps = [
        ":domains-proto-go",
        ":service",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//rest",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_zap//:zap",
    ],
)

go_library(
    name = "service",
    srcs = [
        "domains.go",
        "service.go",
    ],
    importpath = "api.vimana.host/v1",
    deps = [
        ":domains-proto-go",
        "@io_k8s_client_go//kubernetes",
        "@org_uber_go_zap//:zap",
    ],
)

go_proto_library(
    name = "domains-proto-go",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "api.vimana.host/v1/domains",
    protos = [":domains-proto"],
    deps = [
        "@googleapis//google/api:annotations_go_proto",
    ],
)

proto_library(
    name = "domains-proto",
    srcs = ["domains.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "services-proto-go",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "api.vimana.host/v1/services",
    protos = [":services-proto"],
    deps = [
        "@googleapis//google/api:annotations_go_proto",
    ],
)

proto_library(
    name = "services-proto",
    srcs = ["services.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/api:annotations_proto",
    ],
)

oci_image(
    name = "image",
    base = "@distroless-base",
    entrypoint = ["/server"],
    tars = [":server-tar"],
)

pkg_tar(
    name = "server-tar",
    srcs = [":server"],
)

oci_load(
    name = "load-image",
    image = ":image",
    repo_tags = ["vimana-api-v1:latest"],
)

oci_push(
    name = "push-image-local",
    image = ":image",
    remote_tags = ["latest"],
    repository = "localhost:5000/vimana-api-v1",
    visibility = ["//e2e:__pkg__"],
)
