load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files(["image-push.sh"])

py_binary(
    name = "push-image",
    srcs = ["image-push.py"],
    main = "image-push.py",
    visibility = ["//visibility:public"],
    deps = [
        "//dev/lib:util-python",
        "@pypi//requests",
    ],
)

sh_binary(
    name = "self-signed-tls",
    srcs = ["self-signed-tls.sh"],
)
