""" Build the K8s node image for use in a production Vimana cluster. """

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//dev:platform-binary.bzl", "platform_binary")

sh_binary(
    name = "make-image",
    srcs = ["image-make.sh"],
    args = [
        "$(location :vimanad-x86_64-linux)",
        "$(location :vimanad.prod.service)",
        "$(location :containerd-config.toml)",
    ],
    data = [
        ":containerd-config.toml",
        ":vimanad.prod.service",
        ":vimanad-x86_64-linux",
    ],
    deps = ["//dev:bash-util"],
)

# Cross-compile a statically-linked `vimanad` Linux binary suitable for a container or a VM.
platform_binary(
    name = "vimanad-x86_64-linux",
    platform = "//dev:x86_64-linux-musl",
    target = "//work/runtime",
    visibility = ["//dev/minikube:__pkg__"],
)
