""" Build the K8s node image for use in a production Vimana cluster. """

load("@rules_python//python:defs.bzl", "py_binary")
load("//dev/rules:platform-binary.bzl", "platform_binary")

py_binary(
    name = "make-image",
    srcs = ["image-make.py"],
    data = [
        ":containerd-config.toml",
        ":vimanad.prod.service",
        ":vimanad-x86_64-linux",
    ],
    main = "image-make.py",
    deps = [
        "//cluster/profiles:load",
        "//dev/lib:util-python",
        "@pypi//fabric",
        "@pypi//google_cloud_compute",
        "@pypi//google_cloud_os_login",
        "@pypi//requests",
    ],
)

# Cross-compile a statically-linked `vimanad` Linux binary suitable for a container or a VM.
platform_binary(
    name = "vimanad-x86_64-linux",
    platform = "//dev:x86_64-linux-musl",
    target = "//runtime",
    visibility = ["//dev/minikube:__pkg__"],
)
