load("@bazel_skylib//rules/directory:directory.bzl", "directory")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_test(
    name = "success-test",
    srcs = ["success-test.py"],
    data = [":data"],
    deps = [":util"],
)

py_library(
    name = "util",
    srcs = ["util.py"],
    data = [
        "//compiler",
        "@protobuf//:protoc",
    ],
)

directory(
    name = "data",
    srcs = glob(["data/**"]),
)
