load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_shell//shell:sh_library.bzl", "sh_library")

package(default_visibility = ["//visibility:public"])

sh_library(
    name = "util-bash",
    srcs = ["util.sh"],
)

py_library(
    name = "util-python",
    srcs = ["util.py"],
    deps = [
        "@pypi//requests",
        "@pypi//rich",
    ],
)
